--- a/W3SchoolsDark.user.css
+++ b/W3SchoolsDark.user.css
@@ -23,12 +23,11 @@
 #main {
     background-color: #202020;
 }
-
 #right {
     background-color: #202020;
 }
 .w3-example {
-    background-color: red;
+    background-color: #303030;
 }
 .cssHigh {
     background-color: #151515;
