--- a/W3SchoolsDark.user.css
+++ b/W3SchoolsDark.user.css
@@ -5,7 +5,7 @@
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
 @homepageURL    https://github.com/Psykek66/UserCSS
-@updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/W3SchoolsDark.user.css
+@updateURL      https://github.com/Psykek66/UserCSS/blob/master/W3SchoolsDark.user.css
 ==/UserStyle== */
 
 @-moz-document url-prefix("https://www.w3schools.com/") {
