--- a/W3SchoolsDark.user.css
+++ b/W3SchoolsDark.user.css
@@ -5,13 +5,10 @@
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
 @homepageURL    https://github.com/Psykek66/UserCSS
-@updateURL      https://github.com/Psykek66/UserCSS/raw/master/W3SchoolsDark.user.css
+@updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/W3SchoolsDark.user.css
 ==/UserStyle== */
 
 @-moz-document url-prefix("https://www.w3schools.com/") {
-body {
-    filter: invert(1);
-}
 .w3-container.top {
     background-color: #101010;
     color: #999;
