--- a/SlitherDark.user.css
+++ b/SlitherDark.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name           ThingiverseDark
+@name           SlitherDark
 @version        1.0.0
 @description    Night mode for slither.io
 @author         Psykek/PrototypeChicken
