--- a/ThingiverseDark.user.css
+++ b/ThingiverseDark.user.css
@@ -1109,4 +1109,12 @@ header {
     color: #202020;
     text-decoration: underline;
 }
+.site-header {
+	position: relative;
+	box-shadow: 0px 1px 1px #000;
+	height: 60px;
+	border-bottom: 1px solid #000000;
+	width: 100%;
+	min-width: 970px;
+}
 }
