--- a/ThingiverseDark.user.css
+++ b/ThingiverseDark.user.css
@@ -1111,9 +1111,9 @@ header {
 }
 .site-header {
 	position: relative;
-	box-shadow: 0px 1px 1px #000;
+	box-shadow: 0px 1px 0px #000;
 	height: 60px;
-	border-bottom: 1px solid #000000;
+	border-bottom: none;
 	width: 100%;
 	min-width: 970px;
 }
