--- a/HastebinDark.user.css
+++ b/HastebinDark.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name           HasteDark
+@name           HastebinDark
 @version        1.0.0
 @description    Night mode for hastebin.com
 @author         Psykek/PrototypeChicken
