--- a/Mee6Dark.user.css
+++ b/Mee6Dark.user.css
@@ -171,7 +171,7 @@ h3 {
     background-color: #cac9c9 !important;
 }
 .playerGuildSettings {
-    border-color: #444; !important;
+    border-color: #444 !important;
 }
 .playerProfile .Toggle.checked {
     background-color: #303030!important;
