--- a/GoogleClassroomBlack.user.css
+++ b/GoogleClassroomBlack.user.css
@@ -10,7 +10,7 @@
 
 @-moz-document domain("classroom.google.com") {
 
-/* There will be a few issues with this theme because, as you can probably see by the css id names, google (unintentionally(?)) makes it difficult to make css themes for their websites. Most, if not all of the existing bugs will probably remain unfixed. */
+/* There will be a few issues with this theme because, as you can probably see by the css id names, google (unintentionally(?)) makes it difficult to make css themes for their websites. Most, if not all of the existing bugs will probably remain unfixed. I'm also not a teacher, so any of the pages that are exclusive the them are not included in this style.*/
     
 /* I've only tried this theme on firefox, chrome, and edge. I know it works pretty well on firefox and chrome, but there are a lot of issues with it on edge. */
     
