--- a/GoogleClassroomBlack.user.css
+++ b/GoogleClassroomBlack.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Google Classroom Black Theme
-@version        1.0.0
+@version        1.0.1
 @description    Night mode for https://classroom.google.com/
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
@@ -10,7 +10,7 @@
 
 @-moz-document domain("classroom.google.com") {
 
-/* There will be a few issues with this theme because, as you can probably see by the css id names, google (unintentionally(?)) makes it difficult to make css themes for their websites. Most, if not all of the existing bugs will probably remain unfixed. I'm also not a teacher, so any of the pages that are exclusive the them are not included in this style.*/
+/* There will be a few issues with this theme because, as you can probably see by the css id names, google (unintentionally(?)) makes it difficult to make css themes for their websites. Most, if not all of the existing bugs will probably remain unfixed. */
     
 /* I've only tried this theme on firefox, chrome, and edge. I know it works pretty well on firefox and chrome, but there are a lot of issues with it on edge. */
     
@@ -386,5 +386,12 @@ a {
 }
 .nmFHZb {
     color: #555 !important;
+}
+.etFl5b .QRiHXd {
+	color: #000;
+	text-decoration: underline;
+}
+.rbygle path {
+	color: #000;
 }
 }
