--- a/GoogleClassroomBlack(LighterText).user.css
+++ b/GoogleClassroomBlack(LighterText).user.css
@@ -474,6 +474,30 @@ a {
 	color: #000;
 	text-decoration: underline;
 }
+.fb0g6 {
+	background-color: #050505;
+	border: 1px solid #222;
+	border-top: none;
+}
+.qj5L0 {
+	color: #aaa;
+	padding-top: 20px;
+}
+.qj5L0 {
+	border-color: #555;
+}
+.J9fJmf {
+	background-color: #050505;
+	border: 1px solid #222;
+	border-top: none;
+}
+.qs41qe .snByac {
+	display: none;
+}
+.evJWRb.M9Bg4d .snByac {
+	color: #aaa;
+}
+
 .rbygle path {
 	color: #000;
 }
