--- a/GoogleClassroomBlack.user.css
+++ b/GoogleClassroomBlack.user.css
@@ -21,6 +21,7 @@ v1.1.1
 v1.1.2
 - Changed color of white loading bar on comments
 - Simplified class headers (very bottom of style, remove if you don't like)
+- Changed color of white line between upcoming assignments
 =====/UPDATE LOG ===== */
 
 @-moz-document domain("classroom.google.com") {
