--- a/GoogleClassroomBlack.user.css
+++ b/GoogleClassroomBlack.user.css
@@ -534,6 +534,10 @@ a {
 .PeGHgb .bFjUmb-Ysl7Fe {
 	background-color: #000;
 }
+.oBSRLe {
+	border-top-color: #222 !important;
+}
+
 
 
 /* ==== Class Header ==== */
